src/main/antlr4/.antlr/ArabicBASICParser.java
// Generated from /Users/michaelgatto/Development/ArabicBASIC/src/main/antlr4/ArabicBASIC.g4 by ANTLR 4.13.1

package com.lisantra.arabicbasic;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ArabicBASICParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, COMMENT=71, STRING=72, NEXT_ADJ=73, 
		STACK_EMPTY_PRED=74, IDENTIFIER=75, COMMA=76, REAL=77, INTEGER=78, EOL=79, 
		WS=80, BOM=81;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_simpleAssignment = 3, 
		RULE_arrayAssignment = 4, RULE_arrayCreation = 5, RULE_conditionalBlock = 6, 
		RULE_singleLineConditional = 7, RULE_forLoop = 8, RULE_whileLoop = 9, 
		RULE_defineSingleLineFunction = 10, RULE_callFunction = 11, RULE_print = 12, 
		RULE_input = 13, RULE_blank = 14, RULE_expression = 15, RULE_subscript = 16, 
		RULE_arraySize = 17, RULE_booleanExpression = 18, RULE_variable = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "statement", "simpleAssignment", "arrayAssignment", 
			"arrayCreation", "conditionalBlock", "singleLineConditional", "forLoop", 
			"whileLoop", "defineSingleLineFunction", "callFunction", "print", "input", 
			"blank", "expression", "subscript", "arraySize", "booleanExpression", 
			"variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\u0635\\u0627\\u0631'", "'='", "'['", "']'", "'\\u0645\\u0635\\u0641\\u0648\\u0641\\u0629'", 
			"'\\u0645\\u0635\\u0641\\u0648\\u0641\\u0647'", "'('", "')'", "'\\u0627\\u0630\\u0627'", 
			"'\\u0625\\u0630\\u0627'", "'\\u062B\\u0645'", "'\\u0648\\u0625\\u0644\\u0627 \\u0627\\u0630\\u0627'", 
			"'\\u0648\\u0625\\u0644\\u0627 \\u0625\\u0630\\u0627'", "'\\u0648\\u0625\\u0644\\u0627'", 
			"'\\u062E\\u062A\\u0627\\u0645 \\u0627\\u0630\\u0627'", "'\\u0644\\u0643\\u0644'", 
			"'\\u062D\\u062A\\u0649'", "'\\u062F\\u0631\\u062C\\u0629'", "'\\u0637\\u0627\\u0644\\u0645\\u0627'", 
			"'\\u062E\\u062A\\u0627\\u0645 \\u0637\\u0627\\u0644\\u0645\\u0627'", 
			"'\\u062F\\u0627\\u0644\\u0651\\u0629'", "'\\u062F\\u0627\\u0644\\u0629'", 
			"'\\u0627\\u062C\\u0631\\u064A'", "'\\u0625\\u062C\\u0631\\u064A'", "'\\u0627\\u0637\\u0628\\u0639'", 
			"'\\u0625\\u0637\\u0628\\u0639'", "';'", "'\\u061B'", "'\\u0627\\u062F\\u062E\\u0644'", 
			"'\\u0623\\u062F\\u062E\\u0644'", "'ABS'", "'COS'", "'SIN'", "'TAN'", 
			"'LOG'", "'EXP'", "'INT'", "'SQR'", "'RND'", "'LEFT'", "'RIGHT'", "'MID'", 
			"'LEN'", "'CHR'", "'ORD'", "'\\u0645\\u0643\\u062F\\u0633'", "'\\u0627\\u062F\\u0641\\u0639'", 
			"'\\u0625\\u062F\\u0641\\u0639'", "'\\u0627\\u0633\\u062D\\u0628'", "'\\u0625\\u0633\\u062D\\u0628'", 
			"'\\u0627\\u0646\\u0638\\u0631'", "'\\u0623\\u0646\\u0638\\u0631'", "'-'", 
			"'^'", "'MOD'", "'*'", "'/'", "'+'", "'>'", "'<'", "'<='", "'>='", "'<>'", 
			"'\\u0644\\u064A\\u0633'", "'\\u0627\\u064A\\u0636\\u0627\\u064B'", "'\\u0627\\u0645'", 
			"'\\u0627\\u0648'", "'\\u0623\\u0648'", "'\\u0635\\u062D\\u064A\\u062D'", 
			"'\\u062E\\u0637\\u0623'", null, null, null, null, null, null, null, 
			null, null, null, "'\\uFEFF'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "COMMENT", 
			"STRING", "NEXT_ADJ", "STACK_EMPTY_PRED", "IDENTIFIER", "COMMA", "REAL", 
			"INTEGER", "EOL", "WS", "BOM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ArabicBASIC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArabicBASICParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ArabicBASICParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			block();
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(43);
					statement();
					}
					} 
				}
				setState(48);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(ArabicBASICParser.COMMENT, 0); }
		public BlankContext blank() {
			return getRuleContext(BlankContext.class,0);
		}
		public SimpleAssignmentContext simpleAssignment() {
			return getRuleContext(SimpleAssignmentContext.class,0);
		}
		public TerminalNode EOL() { return getToken(ArabicBASICParser.EOL, 0); }
		public ArrayAssignmentContext arrayAssignment() {
			return getRuleContext(ArrayAssignmentContext.class,0);
		}
		public SingleLineConditionalContext singleLineConditional() {
			return getRuleContext(SingleLineConditionalContext.class,0);
		}
		public ConditionalBlockContext conditionalBlock() {
			return getRuleContext(ConditionalBlockContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public DefineSingleLineFunctionContext defineSingleLineFunction() {
			return getRuleContext(DefineSingleLineFunctionContext.class,0);
		}
		public CallFunctionContext callFunction() {
			return getRuleContext(CallFunctionContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				match(COMMENT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				blank();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				simpleAssignment();
				setState(52);
				match(EOL);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(54);
				arrayAssignment();
				setState(55);
				match(EOL);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(57);
				singleLineConditional();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(58);
				conditionalBlock();
				setState(59);
				match(EOL);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(61);
				forLoop();
				setState(62);
				match(EOL);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(64);
				whileLoop();
				setState(65);
				match(EOL);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(67);
				defineSingleLineFunction();
				setState(68);
				match(EOL);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(70);
				callFunction();
				setState(71);
				match(EOL);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(73);
				print();
				setState(74);
				match(EOL);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(76);
				input();
				setState(77);
				match(EOL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleAssignmentContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public List<Token> name = new ArrayList<Token>();
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(ArabicBASICParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ArabicBASICParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ArabicBASICParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ArabicBASICParser.COMMA, i);
		}
		public SimpleAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).enterSimpleAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).exitSimpleAssignment(this);
		}
	}

	public final SimpleAssignmentContext simpleAssignment() throws RecognitionException {
		SimpleAssignmentContext _localctx = new SimpleAssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simpleAssignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__0);
			setState(82);
			((SimpleAssignmentContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			((SimpleAssignmentContext)_localctx).name.add(((SimpleAssignmentContext)_localctx).IDENTIFIER);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(83);
				match(COMMA);
				setState(84);
				((SimpleAssignmentContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				((SimpleAssignmentContext)_localctx).name.add(((SimpleAssignmentContext)_localctx).IDENTIFIER);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(T__1);
			setState(91);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayAssignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ArabicBASICParser.IDENTIFIER, 0); }
		public SubscriptContext subscript() {
			return getRuleContext(SubscriptContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ArrayAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).enterArrayAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).exitArrayAssignment(this);
		}
	}

	public final ArrayAssignmentContext arrayAssignment() throws RecognitionException {
		ArrayAssignmentContext _localctx = new ArrayAssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arrayAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(IDENTIFIER);
			setState(94);
			match(T__2);
			setState(95);
			subscript();
			setState(96);
			match(T__3);
			setState(97);
			match(T__1);
			setState(98);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayCreationContext extends ParserRuleContext {
		public ArraySizeContext arraySize() {
			return getRuleContext(ArraySizeContext.class,0);
		}
		public ArrayCreationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayCreation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).enterArrayCreation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).exitArrayCreation(this);
		}
	}

	public final ArrayCreationContext arrayCreation() throws RecognitionException {
		ArrayCreationContext _localctx = new ArrayCreationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayCreation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==T__4 || _la==T__5) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(101);
			match(T__6);
			setState(102);
			arraySize();
			setState(103);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalBlockContext extends ParserRuleContext {
		public BooleanExpressionContext booleanExpression;
		public List<BooleanExpressionContext> tests = new ArrayList<BooleanExpressionContext>();
		public List<TerminalNode> EOL() { return getTokens(ArabicBASICParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(ArabicBASICParser.EOL, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<BooleanExpressionContext> booleanExpression() {
			return getRuleContexts(BooleanExpressionContext.class);
		}
		public BooleanExpressionContext booleanExpression(int i) {
			return getRuleContext(BooleanExpressionContext.class,i);
		}
		public ConditionalBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).enterConditionalBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).exitConditionalBlock(this);
		}
	}

	public final ConditionalBlockContext conditionalBlock() throws RecognitionException {
		ConditionalBlockContext _localctx = new ConditionalBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_conditionalBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ( !(_la==T__8 || _la==T__9) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(106);
			((ConditionalBlockContext)_localctx).booleanExpression = booleanExpression(0);
			((ConditionalBlockContext)_localctx).tests.add(((ConditionalBlockContext)_localctx).booleanExpression);
			setState(107);
			match(T__10);
			setState(108);
			match(EOL);
			setState(109);
			block();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11 || _la==T__12) {
				{
				{
				setState(110);
				_la = _input.LA(1);
				if ( !(_la==T__11 || _la==T__12) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(111);
				((ConditionalBlockContext)_localctx).booleanExpression = booleanExpression(0);
				((ConditionalBlockContext)_localctx).tests.add(((ConditionalBlockContext)_localctx).booleanExpression);
				setState(112);
				match(T__10);
				setState(113);
				match(EOL);
				setState(114);
				block();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(121);
				match(T__13);
				setState(122);
				match(EOL);
				setState(123);
				block();
				}
			}

			setState(126);
			match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleLineConditionalContext extends ParserRuleContext {
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SingleLineConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleLineConditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).enterSingleLineConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).exitSingleLineConditional(this);
		}
	}

	public final SingleLineConditionalContext singleLineConditional() throws RecognitionException {
		SingleLineConditionalContext _localctx = new SingleLineConditionalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_singleLineConditional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_la = _input.LA(1);
			if ( !(_la==T__8 || _la==T__9) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(129);
			booleanExpression(0);
			setState(130);
			match(T__10);
			setState(131);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForLoopContext extends ParserRuleContext {
		public Token control;
		public Token lower;
		public ExpressionContext upper;
		public Token step;
		public Token next;
		public TerminalNode EOL() { return getToken(ArabicBASICParser.EOL, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode NEXT_ADJ() { return getToken(ArabicBASICParser.NEXT_ADJ, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ArabicBASICParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ArabicBASICParser.IDENTIFIER, i);
		}
		public List<TerminalNode> INTEGER() { return getTokens(ArabicBASICParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(ArabicBASICParser.INTEGER, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ForLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).enterForLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicBASICListener ) ((ArabicBASICListener)listener).exitForLoop(this);
		}
	}

	public final ForLoopContext forLoop() throws RecognitionException {
		ForLoopContext _localctx = new ForLoopContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forLoop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(T__15);
			setState(134);
			((ForLoopContext)_localctx).control = match(IDENTIFIER);
			setState(135);
			match(T__1);
			setState(136);
			((ForLoopContext)_localctx).lower = match(INTEGER);
			setState(137);
			match(T__16);
			setState(138);
			((ForLoopContext)_localctx).upper = expression(0);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(139);
				match(T__17);
				setState(140);
				match(T__1);
				setState(141);
				((ForLoopContext)_localctx).step = match(INTEGER);
				}
			}
